--- a/club.css
+++ b/club.css
@@ -15,17 +15,8 @@ h1 {
   padding: 30px 0px;
 }
 
-p {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 40px;
-  font-size: 20px;
-  padding: 10px 0; 
-  margin: 10px 0;
-  text-align: center;
-}
-
-.justified-content{
-    text-align: justify;
+.justified-content {
+  text-align: justify;
 }
 
 .header-text {
@@ -43,6 +34,52 @@ p {
   overflow: hidden;
   transition: 0.8s;
   margin: 50px 0px;
+}
+
+.form-btn {
+  width: 100%;
+  height: 200px;
+  margin: 10px auto;
+  position: relative;
+}
+
+.form-btn h2{
+    text-align: center;
+    margin: 30px 0;
+}
+
+#form-btn {
+    /* default */
+  all: unset;
+  display: inline-block;
+  max-width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  border: 2px solid #000;
+  color: #000;
+  font-size: 20px;
+  border-radius: 5px;
+  padding: 0 33px;
+  font-weight: bold;
+  height: 50px;
+  cursor: pointer;
+  text-align: center;
+  margin: 0;
+  text-decoration: none;
+
+  /* custom */
+  position: absolute;
+  top: 50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+
+  transition: all 0.5s ease-in-out;
+}
+
+#form-btn:hover{
+    background: #000;
+    color: #fff;
 }
 
 .text.reveal {
@@ -145,32 +182,41 @@ p {
   }
 }
 
-@media only screen and (max-width: 414px) {
-    .content {
-        width: 100%;
-        /* margin: 50px 50px; */
-        padding: 20px;
-      }
+@media only screen and (max-width: 375px) {
+    .form-btn h2{
+        text-align: center;
+        margin: 20px 0;
+        font-size: 18px;
+    }
 
-      .header-section h2{
-          padding: 5px;
-      }
-
-      .text {
-        text-align: justify;
-        display: inline-block;
-        position: relative;
-        overflow: hidden;
-        transition: 0.8s;
-        /* margin: 50px 0px; */
-        font-size: 40px;
-      }
-      .img {
-        position: relative;
-        display: block;
-        overflow: hidden;
-        height: 200px;
-      }
+    #form-btn {
+        /* default */
+      all: unset;
+      display: inline-block;
+      max-width: 100%;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      border: 2px solid #000;
+      color: #000;
+      font-size: 18px;
+      border-radius: 5px;
+      padding: 12px 27px;
+      font-weight: bold;
+      height: 25px;
+      cursor: pointer;
+      text-align: center;
+      margin: 0;
+      text-decoration: none;
+    
+      /* custom */
+      position: absolute;
+      top: 50%;
+      left:50%;
+      transform: translate(-50%, -50%);
+    
+      transition: all 0.5s ease-in-out;
+    }
 }
 
 @media only screen and (max-width: 834px) and (min-width: 639px) {
