--- a/resources/country-matrix.css
+++ b/resources/country-matrix.css
@@ -9,12 +9,12 @@
   cursor: pointer;
 }
 
-.acc-title{
+.acc-title {
   font-size: 50px;
   text-align: center;
 }
 
-.acc-holder{
+.acc-holder {
   margin: 0px 50px;
 }
 
@@ -48,7 +48,15 @@
   padding-bottom: 40px;
 }
 
-@media (max-width: 900px) {
+[data-collapsible] {
+  cursor: pointer;
+}
+
+.heightZero {
+  height: 0px;
+}
+
+@media only screen and (max-width: 414px) {
   .acc-block {
     font-size: 20px;
     padding: 10px;
@@ -63,12 +71,193 @@
   .list:last-child {
     padding-bottom: 10px;
   }
+
+  .acc-title,
+  .acc-no,
+  .acc-toggle-icon {
+    font-size: 15px;
+    text-align: center;
+  }
+
+  .acc-title {
+    margin: 0 10px;
+  }
+
+  .acc-block {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    align-items: center;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.233);
+    cursor: pointer;
+  }
+
+  .acc-holder {
+    margin: 0px 10px;
+  }
+
+  .list {
+    padding: 4px 0;
+    list-style: none;
+    text-align: center;
+    font-size: 15px !important;
+  }
 }
 
-[data-collapsible] {
-  cursor: pointer;
+@media only screen and (max-width: 638px) and (min-width: 415px) {
+  .acc-block {
+    font-size: 20px;
+    padding: 10px;
+  }
+  .list-holder .list {
+    font-size: 20px;
+  }
+  .list:first-child {
+    padding-top: 10px;
+  }
+
+  .list:last-child {
+    padding-bottom: 10px;
+  }
+
+  .acc-title,
+  .acc-no,
+  .acc-toggle-icon {
+    font-size: 18px;
+    text-align: center;
+  }
+
+  .acc-title {
+    margin: 0 10px;
+  }
+
+  .acc-block {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    align-items: center;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.233);
+    cursor: pointer;
+  }
+
+  .acc-holder {
+    margin: 0px 10px;
+  }
+
+  .list {
+    padding: 4px 0;
+    list-style: none;
+    text-align: center;
+    font-size: 15px !important;
+  }
+
 }
 
-.heightZero {
-  height: 0px;
+@media only screen and (max-width: 834px) and (min-width: 639px) {
+
+  .acc-block {
+    font-size: 20px;
+    padding: 10px;
+  }
+  .list-holder .list {
+    font-size: 20px;
+  }
+  .list:first-child {
+    padding-top: 10px;
+  }
+
+  .list:last-child {
+    padding-bottom: 10px;
+  }
+
+  .acc-title,
+  .acc-no,
+  .acc-toggle-icon {
+    font-size: 15px;
+    text-align: center;
+  }
+
+  .acc-title {
+    margin: 0 10px;
+  }
+
+  .acc-block {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    align-items: center;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.233);
+    cursor: pointer;
+  }
+
+  .acc-holder {
+    margin: 0px 30px;
+  }
+
+  .list {
+    padding: 4px 0;
+    list-style: none;
+    text-align: center;
+    font-size: 15px !important;
+  }
+}
+
+@media only screen and (max-width: 1220px) and (min-width: 835px) {
+
+  .acc-block {
+    font-size: 30px;
+    padding: 30px;
+  }
+  .list-holder .list {
+    font-size: 20px;
+  }
+  .list:first-child {
+    padding-top: 10px;
+  }
+
+  .list:last-child {
+    padding-bottom: 10px;
+  }
+
+  .acc-title,
+  .acc-no,
+  .acc-toggle-icon {
+    font-size: 25px;
+    text-align: center;
+  }
+
+  .acc-title {
+    margin: 0 10px;
+  }
+
+  .acc-block {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    align-items: center;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.233);
+    cursor: pointer;
+  }
+
+  .acc-holder {
+    margin: 0px 50px;
+  }
+
+  .list {
+    padding: 4px 0;
+    list-style: none;
+    text-align: center;
+    /* font-size: 15px !important; */
+  }
+}
+
+@media only screen and (max-width: 1820px) and (min-width: 1366px) {
 }
