--- a/about.css
+++ b/about.css
@@ -16,11 +16,11 @@ h1 {
 }
 
 p {
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 40px;
   font-size: 20px;
   padding: 10px 0; 
   margin: 10px 0;
+  line-height: 40px;
   text-align: center;
 }
 
