--- a/club.css
+++ b/club.css
@@ -7,6 +7,53 @@
   margin: 80px 0;
 }
 
+.section-3-cols {
+  /* padding: 1px 20px; */
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+  margin-top: 50px;
+}
+
+#sec-img-1,
+#sec-img-2,
+#sec-img-3,
+#sec-img-4,
+#sec-img-5 {
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 600px;
+  margin-right: 40px;
+}
+
+#sec-img-1{
+    background-image: url(./assets/IMG_6180.JPG);
+}
+
+#sec-img-2{
+    background-image: url(./assets/sec-gen-open-hair.JPG);
+}
+
+#sec-img-3{
+    background-image: url(./assets/IMG_6182.JPG);
+}
+
+#sec-img-4{
+    background-image: url(./assets/IMG_6185.JPG);
+}
+
+#sec-img-5{
+    background-image: url(./assets/IMG_6181.JPG);
+}
+
+.section-col {
+  padding: 1px 20px;
+  flex-direction: column;
+}
+
 h1 {
   font-size: 60px;
   font-weight: 400;
@@ -43,13 +90,13 @@ h1 {
   position: relative;
 }
 
-.form-btn h2{
-    text-align: center;
-    margin: 30px 0;
+.form-btn h2 {
+  text-align: center;
+  margin: 30px 0;
 }
 
 #form-btn {
-    /* default */
+  /* default */
   all: unset;
   display: inline-block;
   max-width: 100%;
@@ -71,15 +118,15 @@ h1 {
   /* custom */
   position: absolute;
   top: 50%;
-  left:50%;
+  left: 50%;
   transform: translate(-50%, -50%);
 
   transition: all 0.5s ease-in-out;
 }
 
-#form-btn:hover{
-    background: #000;
-    color: #fff;
+#form-btn:hover {
+  background: #000;
+  color: #fff;
 }
 
 .text.reveal {
@@ -183,40 +230,53 @@ h1 {
 }
 
 @media only screen and (max-width: 375px) {
-    .form-btn h2{
-        text-align: center;
-        margin: 20px 0;
-        font-size: 18px;
-    }
+  .form-btn h2 {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 18px;
+  }
 
-    #form-btn {
-        /* default */
-      all: unset;
-      display: inline-block;
-      max-width: 100%;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      border: 2px solid #000;
-      color: #000;
-      font-size: 18px;
-      border-radius: 5px;
-      padding: 12px 27px;
-      font-weight: bold;
-      height: 25px;
-      cursor: pointer;
-      text-align: center;
-      margin: 0;
-      text-decoration: none;
-    
-      /* custom */
-      position: absolute;
-      top: 50%;
-      left:50%;
-      transform: translate(-50%, -50%);
-    
-      transition: all 0.5s ease-in-out;
-    }
+  #form-btn {
+    /* default */
+    all: unset;
+    display: inline-block;
+    max-width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    border: 2px solid #000;
+    color: #000;
+    font-size: 18px;
+    border-radius: 5px;
+    padding: 12px 27px;
+    font-weight: bold;
+    height: 25px;
+    cursor: pointer;
+    text-align: center;
+    margin: 0;
+    text-decoration: none;
+
+    /* custom */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    transition: all 0.5s ease-in-out;
+  }
+
+  .section-3-cols {
+    /* padding: 1px 20px; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+  }
+  .section-col {
+    padding: 1px 20px;
+    /* flex-direction: column; */
+  }
 }
 
 @media only screen and (max-width: 834px) and (min-width: 639px) {
