added photos to club.html

--- a/club.css
+++ b/club.css
@@ -34,7 +34,7 @@
 }
 
 #sec-img-2{
-    background-image: url(./assets/sec-gen-open-hair.JPG);
+    background-image: url(./assets/sec-gen.JPG);
 }
 
 #sec-img-3{
