added photos to about page and added hamburger menu

--- a/about.css
+++ b/about.css
@@ -36,7 +36,7 @@ p {
   overflow: hidden;
 }
 
-.text {
+.text, .justified-content {
   text-align: justify;
   display: inline-block;
   position: relative;
@@ -45,10 +45,10 @@ p {
   margin: 50px 0px;
 }
 
-.text.reveal {
+.text.reveal, .justified-content.reveal {
   animation: revealTextAnimation 0.64s ease forwards;
 }
-.text:before {
+.text:before, .justified-content:before {
   content: "";
   position: absolute;
   top: 0;
@@ -56,22 +56,26 @@ p {
   height: 100%;
   /*   z-index: 1; */
 }
-.text.reveal:before {
-  background: rgb(58, 58, 180);
+.text.reveal:before, .justified-content.reveal:before {
+  background: rgb(255, 255, 255);
   background: linear-gradient(
     90deg,
-    rgba(58, 58, 180, 1) 24%,
-    rgba(253, 29, 29, 1) 100%,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(27, 27, 138, 1) 0%,
+    rgba(91, 91, 170, 1) 50%,
+    rgba(147, 22, 22, 1) 100%,
     rgba(252, 176, 69, 1) 100%
   );
   animation: blockRevealAnimation 0.8s ease forwards;
 }
 
+
+
 .img {
   position: relative;
   display: block;
   overflow: hidden;
-  height: 400px;
+  height: fit-content;
 }
 
 .img img {
@@ -94,11 +98,13 @@ p {
 }
 
 .img.reveal:before {
-  background: rgb(58, 58, 180);
+  background: rgb(255, 255, 255);
   background: linear-gradient(
     90deg,
-    rgba(58, 58, 180, 1) 24%,
-    rgba(253, 29, 29, 1) 100%,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(27, 27, 138, 1) 0%,
+    rgba(91, 91, 170, 1) 50%,
+    rgba(147, 22, 22, 1) 100%,
     rgba(252, 176, 69, 1) 100%
   );
   animation: blockRevealAnimation 0.8s ease forwards;
@@ -171,6 +177,12 @@ p {
         overflow: hidden;
         height: 200px;
       }
+
+      .justified-content{
+        text-align: justify;
+        font-size: 10px;
+        line-height: 30px;
+    }
 }
 
 @media only screen and (max-width: 834px) and (min-width: 639px) {
