--- a/style.css
+++ b/style.css
@@ -1,6 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
 
+:root {
+  --color-primary: #18181a;
+  --color-secondary: #75757c;
+  --color-dark: #364c62;
+  --color-light: #f5f5f5;
+  --font-family-primary: "Roboto Mono", monospace;
+  --font-family-secondary: "Rubik Mono One", sans-serif;
+  --td: 150ms;
+  --te: cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -12,6 +23,275 @@ html,
 body {
   height: 100%;
 }
+
+/* hamburger menu start */
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: center;
+  margin: 0 auto;
+  max-width: 45rem;
+  background: #000;
+  padding: 1rem;
+}
+.page-container > * + * {
+  margin-top: 1.5rem;
+}
+
+.nav-main {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  left: -100%;
+  position: fixed;
+  transition: left 0s calc(var(--td) * 2), transform 0s calc(var(--td) * 2);
+  width: 100%;
+}
+.nav-main::before,
+.nav-main::after {
+  content: "";
+  background-color: var(--color-primary);
+  height: 50%;
+  left: 0;
+  position: absolute;
+  transform: translateX(-110%);
+  transform-origin: 0 50%;
+  transition: transform calc(var(--td) * 2) var(--td) var(--te);
+  width: 100%;
+  z-index: -100;
+}
+.nav-main::before {
+  top: 0;
+}
+.nav-main::after {
+  bottom: 0;
+}
+.nav-main .menu__item {
+  opacity: 0;
+  transform: translateX(-1rem);
+  transition: opacity var(--td) var(--te), transform var(--td) var(--te);
+}
+
+[id="main-navigation-toggle"] {
+  opacity: 0;
+  position: fixed;
+  top: -100%;
+}
+[id="main-navigation-toggle"] ~ label {
+  cursor: pointer;
+  position: fixed;
+  right: 1rem;
+  top: 1rem;
+  display: none;
+  z-index: 999;
+}
+[id="main-navigation-toggle"] ~ label span {
+  display: block;
+  height: 2rem;
+  padding: 0.5rem;
+  position: relative;
+  transition: transform calc(var(--td) * 3) var(--te);
+  width: 2rem;
+}
+[id="main-navigation-toggle"] ~ label span::before,
+[id="main-navigation-toggle"] ~ label span::after {
+  background-color: var(--color-dark);
+  bottom: 0;
+  content: "";
+  height: 4px;
+  left: 0;
+  margin: auto;
+  position: absolute;
+  right: 0;
+  transition: transform calc(var(--td) * 3) var(--te);
+  top: 0;
+  width: calc(100% - 1rem);
+}
+[id="main-navigation-toggle"] ~ label span::before {
+  transform: rotate(0) translateY(-100%);
+}
+[id="main-navigation-toggle"] ~ label span::after {
+  transform: rotate(0) translateY(100%);
+}
+
+[id="main-navigation-toggle"]:checked ~ label span {
+  transform: rotate(1turn);
+}
+[id="main-navigation-toggle"]:checked ~ label span::before {
+  transform: rotate(45deg);
+}
+[id="main-navigation-toggle"]:checked ~ label span::after {
+  transform: rotate(-45deg);
+}
+
+[id="main-navigation-toggle"]:checked ~ .nav-main {
+  left: 0;
+  transition: transform 0s;
+}
+[id="main-navigation-toggle"]:checked ~ .nav-main::before,
+[id="main-navigation-toggle"]:checked ~ .nav-main::after {
+  transform: translateX(0);
+  transition-delay: 0s;
+}
+[id="main-navigation-toggle"]:checked ~ .nav-main::after {
+  transition-delay: calc(var(--td) / 2);
+}
+[id="main-navigation-toggle"]:checked ~ .nav-main .menu__item {
+  opacity: 1;
+  transform: translateX(0);
+  transition: opacity calc(var(--td) * 2) var(--te),
+    transform calc(var(--td) * 2) var(--te);
+}
+[id="main-navigation-toggle"]:checked ~ .nav-main .menu__item:nth-child(1) {
+  transition-delay: calc(var(--td) * 2 * (1 * 0.25));
+  z-index: -1;
+}
+[id="main-navigation-toggle"]:checked ~ .nav-main .menu__item:nth-child(2) {
+  transition-delay: calc(var(--td) * 2 * (2 * 0.25));
+  z-index: -2;
+}
+[id="main-navigation-toggle"]:checked ~ .nav-main .menu__item:nth-child(3) {
+  transition-delay: calc(var(--td) * 2 * (3 * 0.25));
+  z-index: -3;
+}
+[id="main-navigation-toggle"]:checked ~ .nav-main .menu__item:nth-child(4) {
+  transition-delay: calc(var(--td) * 2 * (4 * 0.25));
+  z-index: -4;
+}
+[id="main-navigation-toggle"]:checked ~ .nav-main .menu__item:nth-child(5) {
+  transition-delay: calc(var(--td) * 2 * (5 * 0.25));
+  z-index: -5;
+}
+
+.menu {
+  position: relative;
+  text-align: center;
+  z-index: 1;
+}
+.menu > .menu__item {
+  font-family: var(--font-family-secondary);
+  font-size: 7vmin;
+}
+
+.submenu {
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  transform: translateY(-10%);
+  top: 100%;
+  width: 100%;
+  visibility: hidden;
+  z-index: 9999;
+}
+.submenu .menu__item {
+  font-family: var(--font-family-primary);
+  font-size: 3.5vmin;
+  width: 100%;
+}
+.submenu .menu__link {
+  color: var(--color-secondary);
+  text-shadow: 1px 1px 0 var(--color-primary), 2px 2px 0 var(--color-primary);
+}
+.submenu .menu__link::before,
+.submenu .menu__link::after {
+  display: none;
+}
+
+.menu__item {
+  display: block;
+  position: relative;
+}
+.menu__item:hover .menu__link::before,
+.menu__item:hover .menu__link::after {
+  animation: blink 1s var(--td) steps(1, end) forwards infinite;
+  transform: translateX(calc(100% - 0.5rem));
+  transition-duration: calc(var(--td) * 3);
+}
+.menu__item:hover .menu__link::after {
+  transition-delay: calc(var(--td) / 2);
+}
+.menu__item:hover .submenu {
+  opacity: 1;
+  transform: translateY(0);
+  transition: transform calc(var(--td) * 2) calc(var(--td) * 3) var(--te),
+    opacity calc(var(--td) * 2) calc(var(--td) * 3) var(--te),
+    visibility 0s calc(var(--td) * 3);
+  visibility: visible;
+}
+
+.menu__link {
+  color: var(--color-dark);
+  display: inline-block;
+  font-weight: normal;
+  overflow: hidden;
+  padding: 0.5rem 1rem 0.125rem;
+  position: relative;
+  text-decoration: none;
+  transition: color var(--td) var(--te), opacity var(--td) var(--te),
+    transform var(--td) var(--te);
+  z-index: 1;
+}
+.menu__link::before,
+.menu__link::after {
+  content: "";
+  background-color: var(--color-light);
+  height: 50%;
+  left: 0;
+  position: absolute;
+  transform: translateX(-110%);
+  transform-origin: 0 50%;
+  transition: transform 0s var(--te);
+  width: 100%;
+  z-index: -1;
+}
+.menu__link::before {
+  top: 0;
+}
+.menu__link::after {
+  bottom: 0;
+}
+
+.menu:not(:focus-within):not(:hover) .menu__item .menu__link {
+  opacity: 1;
+  transform: translate(0, 0);
+}
+
+.menu__item {
+  --pull: 30%;
+}
+.menu__item .menu__link {
+  opacity: 0.25;
+  transition-duration: calc(var(--td) * 3);
+  transform: translate(0, calc(var(--pull) * -1));
+}
+.menu__item .submenu .menu__link {
+  opacity: 1;
+}
+.menu__item:hover > .menu__link {
+  color: var(--color-secondary);
+  opacity: 1;
+  transform: translate(0, 0);
+}
+.menu__item:hover > .menu__link:hover {
+  color: var(--color-light);
+  transition-delay: 0s;
+}
+.menu__item:hover ~ .menu__item > .menu__link {
+  transition-duration: calc(var(--td) * 3);
+  transform: translate(0, var(--pull));
+}
+
+@keyframes blink {
+  50%,
+  100% {
+    opacity: 0;
+  }
+}
+
+/* hamburger menu ends */
 
 a {
   text-decoration: none !important;
@@ -33,7 +313,7 @@ nav {
   width: 100%;
   height: 100px;
   text-align: center;
-  z-index: 100;
+  z-index: 10;
 }
 
 .quote {
@@ -88,7 +368,6 @@ nav {
 .menu-bar ul li:hover .sub-menu-1 ul li:last-child {
   border-bottom: none;
 }
-
 
 #logo {
   height: 100%;
@@ -936,7 +1215,6 @@ iframe {
     margin: 10px 0;
     height: fit-content;
   }
-  
 
   .conference-info {
     font-size: 15px;
@@ -1080,9 +1358,6 @@ iframe {
   }
 }
 
-
-
-
 @media only screen and (max-width: 1220px) and (min-width: 835px) {
   .footer-bottom {
     width: 100vw;
@@ -1113,7 +1388,6 @@ iframe {
     margin: 10px 0;
     height: fit-content;
   }
-
 
   .conference-info {
     font-size: 15px;
@@ -1256,7 +1530,7 @@ iframe {
   }
 }
 
-@media only screen and (max-width: 1820px) and (min-width: 1366px){
+@media only screen and (max-width: 1820px) and (min-width: 1366px) {
   /* #main #holder1 {
     position: absolute;
     top: 50%;
@@ -1283,4 +1557,25 @@ iframe {
 } */
 }
 
+@media only screen and (max-width: 1221px) {
+  nav {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0 auto;
+    padding: 100px 0;
+    width: 100%;
+    height: 100px;
+    text-align: center;
+    z-index: 900;
+  }
 
+  [id="main-navigation-toggle"] ~ label {
+    cursor: pointer;
+    position: fixed;
+    right: 1rem;
+    top: 4rem;
+    display: block;
+    z-index: 9999;
+  }
+}
