--- a/style.css
+++ b/style.css
@@ -510,7 +510,7 @@ nav .links li a {
 }
 
 #main #two {
-  background-image: url(./assets/img-2.jpg);
+  background-image: url(./assets/img-2.JPG);
 }
 #main #three {
   background-image: url(./assets/DSC_0106-min.JPG);
