--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
 
+html {
+  scroll-behavior: smooth;
+}
 :root {
   --color-primary: #18181a;
   --color-secondary: #75757c;
@@ -399,7 +402,7 @@ li {
   align-items: center;
 } */
 
-/* 
+/*
 nav .links li a {
   color: rgb(94, 94, 224);
   font-size: 15px;
@@ -1539,7 +1542,7 @@ iframe {
     left: 500px;
     transform: translate(0, -50%);
   }
-  
+
   #main #holder2 {
     position: absolute;
     top: 50%;
@@ -1560,7 +1563,7 @@ iframe {
 }
 
 @media only screen and (max-width: 1221px) {
-  
+
   nav {
     display: flex;
     justify-content: space-evenly;
