--- a/forms/delegate.css
+++ b/forms/delegate.css
@@ -118,6 +118,8 @@ input::-webkit-input-placeholder {
   place-content: center;
 }
 
+
+
 label {
   margin-top: 1.5em;
   margin-bottom: 0.5em;
@@ -144,6 +146,10 @@ select {
   background-origin: content-box;
 }
 
+#enrollment-label, #enrollment{
+  display: none;
+}
+
 .submit-btn {
   color: #000;
   text-align: center;
@@ -156,6 +162,17 @@ select {
 .submit-btn:hover {
   color: #fff;
   background-color: #000;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 @media only screen and (max-width: 414px) {
