--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
 html,
 body {
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 /* hamburger menu start */
@@ -375,6 +376,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+
 }
 
 li {
@@ -492,8 +494,12 @@ nav .links li a {
   overflow: hidden;
 }
 
-#videoplayer video {
+
+
+#videoplayer img {
   height: 90%;
+  width: 100%;
+  object-fit: cover;
   position: absolute;
   top: 50%;
   left: 50%;
